--- a/css.css
+++ b/css.css
@@ -1,16 +1,21 @@
 * {
   box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif; }
+  font-family: "Quicksand", sans-serif; }
+
+html, body {
+  padding: 0;
+  margin: 0; }
 
 #vueCalc {
-  padding: 4em;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center;
+  height: 100vh; }
 
 #display {
   display: grid;
   grid-template-columns: 2fr;
-  width: 13.5em;
+  width: 12em;
   font-size: 2em;
   padding: 1.5em;
   height: 6em;
@@ -21,7 +26,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   font-size: 2em;
-  width: 13.5em; }
+  width: 12em; }
   .wrapper div {
     text-align: center;
     padding: 1em; }
@@ -39,10 +44,14 @@
   border-radius: 0px 0px 10px 0px; }
 
 .rose {
-  background-color: #F4B6CB; }
+  background-color: #f4b6cb; }
 
 .pink {
-  background-color: #CC768D; }
+  background-color: #cc768d; }
 
 .white {
-  background-color: #F3F4EE; }
+  background-color: #f3f4ee; }
+
+@media (max-width: 1280px) {
+  #calcWrapper {
+    transform: scale(0.6); } }
