--- a/css.scss
+++ b/css.scss
@@ -9,7 +9,7 @@ html, body {
   padding: 0;
   margin: 0;
 }
-#vueCalc {
+#vueCalc2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,4 +63,10 @@ html, body {
   #calcWrapper {
     transform: scale(0.7)
   }
+}
+#clearBtn {
+  width: 200%;
+}
+#hiddenBtn {
+  visibility: hidden;
 }
